# GW2-legendary-planner

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ACTIVITIES.md  ARCHITECTURE.md  DEVELOPMENT.md  PACKAGING.md  PLANNERS.md  RECIPES.md  ROADMAP.md
scripts/: build_windows_app.ps1
src/gw2_legendary_planner/: __init__.py  __main__.py  cli.py  constants.py  diagnostics.py
src/gw2_legendary_planner/api/: __init__.py  client.py  commerce.py  items.py  local.py
src/gw2_legendary_planner/cache/: __init__.py  local.py
src/gw2_legendary_planner/config/: __init__.py  profiles.py  settings.py
src/gw2_legendary_planner/data/: __init__.py  activity_goals.json  legendary_focus_items.json  legendary_recipes.json  starter_kit_sets.json
src/gw2_legendary_planner/gui/: __init__.py  dashboard.py  server.py  setup.py
src/gw2_legendary_planner/inventory/: __init__.py  aggregator.py  models.py
src/gw2_legendary_planner/models/: __init__.py  account.py  commerce.py  items.py  snapshot.py
src/gw2_legendary_planner/planner/: __init__.py  achievements.py  activities.py  collections.py  (+13 more)
tests/: test_achievements.py  test_activity_planners.py  test_api_client.py  test_cache.py  test_cli.py  test_collections.py  test_commerce.py  test_goal_comparison.py  test_gui_dashboard.py  test_inventory.py  test_item_metadata.py  test_legendary_focus.py  test_local_loader.py  test_market.py  test_profiles.py  test_progression.py  test_recipe_evaluator.py  test_recipe_interfaces.py  test_recipe_repository.py  test_recipe_validator.py  test_recurring.py  test_reports.py  test_shopping_list.py  test_starter_kits.py  test_wizards_vault.py
(+16 files in other folders)
