[project]
name = "gw2-legendary-planner"
version = "0.1.0"
description = "Library and CLI for Guild Wars 2 account progression and legendary planning."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "Koden02" }
]
keywords = ["guild-wars-2", "gw2", "legendary", "planner", "cli"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment",
]
dependencies = [
  "httpx>=0.27.2",
  "pydantic>=2.8.2",
  "rich>=13.7.1",
  "typer>=0.12.5",
]

[project.urls]
Homepage = "https://github.com/Koden02/GW2-legendary-planner"
Issues = "https://github.com/Koden02/GW2-legendary-planner/issues"

[project.scripts]
gw2planner = "gw2_legendary_planner.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.9",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gw2_legendary_planner"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "N",
  "UP",
  "B",
  "C4",
  "SIM",
  "RUF",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
